--- a/sprint3android/My Catalog/app/src/main/res/values/strings.xml
+++ b/sprint3android/My Catalog/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="navigate_button">Navegar al detalle</string>
+    <string name="detail_title">Detalle</string>
 </resources>
