--- a/sprint3android/My Catalog/app/src/main/res/values/strings.xml
+++ b/sprint3android/My Catalog/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">My Application</string>
     <string name="navigate_button">Navegar al detalle</string>
     <string name="detail_title">Detalle</string>
+    <string name="title_mock">Título de ejemplo</string>
+    <string name="detail_image_desc">Imagen de ejemplo</string>
+    <string name="description_mock">Esta es una descripción mockup. Aquí puede ir cualquier texto que describa el elemento mostrado en el detalle.</string>
+    <string name="me_gusta">Me gusta</string>
 </resources>
